[gd_scene load_steps=4 format=3 uid="uid://cqummgshtj2o2"]

[ext_resource type="Texture2D" uid="uid://di1dxsvncx2ok" path="res://Sprite/Slime.png" id="1_0elns"]
[ext_resource type="Script" path="res://Scene/Stages/Stage2/scripts/boss_slime.gd" id="1_xxaa4"]
[ext_resource type="Texture2D" uid="uid://cru3y8bn2v5o8" path="res://Sprite/shadow.png" id="3_xwlru"]

[node name="Boss" type="Area2D"]
position = Vector2(626, 534)
collision_mask = 2
script = ExtResource("1_xxaa4")

[node name="BossSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_0elns")

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-100, 100, -100, -100, 100, -100, 100, 100)

[node name="AttackDelay" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="BossShadow" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_xwlru")

[connection signal="timeout" from="AttackDelay" to="." method="_on_attack_delay_timeout"]
